gitops/platform/kyverno-policies/tests/workload-audit/resources/platform-acr-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: storefront
  namespace: app-dev
spec:
  containers:
    - name: app
      image: acrplatformprod.azurecr.io/storefront:unsigned
