gitops/platform/kyverno-policies/tests/workload-audit/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: workload-audit-policies
policies:
  - ../../overlays/workload-audit/verify-acr-signed-images.yaml
resources:
  - ./resources/platform-acr-image.yaml
results:
  - policy: kyverno-verify-acr-images
    rule: verify-platform-acr-images-with-cosign
    resources:
      - storefront
    kind: Pod
    result: fail
